--- a/project.config.json
+++ b/project.config.json
@@ -10,7 +10,7 @@
 	"compileType": "miniprogram",
 	"libVersion": "1.9.0",
 	"appid": "wx4457569bdefb422f",
-	"projectname": "%E5%B1%95%E6%B6%A6%E5%AE%B6%E9%95%BF%E7%AB%AF",
+	"projectname": "%E5%B1%95%E6%B6%A6%E5%B0%8F%E7%A8%8B%E5%BA%8F(%E5%AE%B6%E9%95%BF%E7%AB%AF)",
 	"svr": "",
 	"client": "",
 	"qcloudRoot": "",
@@ -32,7 +32,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 15,
+			"current": -1,
 			"list": [
 				{
 					"id": 0,
