--- a/project.config.json
+++ b/project.config.json
@@ -1,7 +1,7 @@
 {
 	"description": "项目配置文件。",
 	"setting": {
-		"urlCheck": true,
+		"urlCheck": false,
 		"es6": true,
 		"postcss": true,
 		"minified": true,
@@ -32,7 +32,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": -1,
+			"current": 16,
 			"list": [
 				{
 					"id": 0,
@@ -128,6 +128,12 @@
 					"id": -1,
 					"name": "wallet",
 					"pathName": "pages/self/wallet/wallet",
+					"query": ""
+				},
+				{
+					"id": 16,
+					"name": "paytohelp",
+					"pathName": "pages/help/pay/pay",
 					"query": ""
 				}
 			]
