update banner and banner link to webview

--- a/app.json
+++ b/app.json
@@ -25,7 +25,7 @@
   "window": {
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#FFF",
-    "navigationBarTitleText": "展润育城",
+    "navigationBarTitleText": "润育商平台",
     "navigationBarTextStyle": "black"
   },
   "tabBar": {
