--- a/project.config.json
+++ b/project.config.json
@@ -1,7 +1,7 @@
 {
 	"description": "项目配置文件。",
 	"setting": {
-		"urlCheck": true,
+		"urlCheck": false,
 		"es6": true,
 		"postcss": true,
 		"minified": true,
@@ -11,10 +11,6 @@
 	"libVersion": "1.9.90",
 	"appid": "wx4457569bdefb422f",
 	"projectname": "%E5%B1%95%E6%B6%A6%E5%B0%8F%E7%A8%8B%E5%BA%8F(%E5%AE%B6%E9%95%BF%E7%AB%AF)",
-	"svr": "",
-	"client": "",
-	"qcloudRoot": "",
-	"miniprogramRoot": "",
 	"condition": {
 		"search": {
 			"current": -1,
@@ -32,7 +28,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 18,
+			"current": -1,
 			"list": [
 				{
 					"id": 0,
